objects/zoom_app__Zoom_Voice_User__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__Check_Plan_TimeStamp__c</fullName>
        <label>Check Plan TimeStamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zoom_app__Has_Zoom_Voice_Call_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Zoom Voice Call Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Login_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__PBX_User_Id__c</fullName>
        <label>PBX User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__RefreshToken__c</fullName>
        <label>RefreshToken</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zoom_app__SFDC_User_Email__c</fullName>
        <label>SFDC User Email</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Web_User_Id__c</fullName>
        <label>Web User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_User_Email__c</fullName>
        <label>Zoom User Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Zoom Voice User</label>
    <nameField>
        <label>Zoom Voice User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Voice Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>